<resources>
    <string name="app_name">AutopartsKinmel</string>
    <string name="popular_items">Popular Items</string>
    <string name="recent_items">Recent Items</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="full_name_txt">Full Name:</string>
    <string name="full_name">Full name</string>
    <string name="password_txt">Password:</string>
    <string name="password">Password</string>
    <string name="confirm_password_txt">Confirm Password:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone:</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="parts_amp_accessories"><![CDATA[Parts & Accessories]]></string>
    <string name="car_accessories">Car - Accessories</string>
    <string name="car_parts">Car - Parts</string>
    <string name="motorcycle_accessories">Motorcycle - Accessories</string>
    <string name="motorcycle_helmet">Motorcycle - Helmet</string>
    <string name="motorcycle_parts">Motorcycle - Parts</string>
    <string name="motorcycle_riding_wear">Motorcycle - Riding Wear</string>
    <string name="motorcycle_tyre_and_wheel">Motorcycle - Tyre and Wheel</string>

    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="guest">Guest</string>
    <string name="search_items">Search items</string>
    <string name="update">Update</string>
    <string name="address_txt">Address:</string>
    <string name="address">Address</string>
    <string name="searched_items">Searched Items</string>
</resources>