<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Register New Account"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_field"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/email_txt"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/full_name_txt"
        android:layout_marginBottom="10dp"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/full_name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/full_name_field"/>

    <EditText
        android:id="@+id/full_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/full_name_txt"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field"
        app:layout_constraintBottom_toTopOf="@id/password_txt"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/full_name_field"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/password_field"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/password_txt"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field"
        app:layout_constraintBottom_toTopOf="@id/confirm_password_txt"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/confirm_password_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/confirm_password_field"/>

    <EditText
        android:id="@+id/confirm_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_txt"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field"
        app:layout_constraintBottom_toTopOf="@id/phone_txt"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/phone_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_field"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/phone_field"/>

    <EditText
        android:id="@+id/phone_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/phone_txt"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/phone_field"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintEnd_toEndOf="@id/email_txt"
        app:layout_constraintBottom_toTopOf="@id/address_field"/>

    <EditText
        android:id="@+id/address_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/address_txt"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field"
        tools:ignore="Autofill"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/teal_200"
        android:text="@string/register"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_field"
        app:layout_constraintStart_toStartOf="@id/phone_field"
        app:layout_constraintEnd_toEndOf="@id/phone_field"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>