<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/edit_profile_card_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="75dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blank_profile"
            tools:ignore="ContentDescription"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/full_name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_card_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_full_name_field"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/edit_full_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/full_name_txt"
        app:layout_constraintStart_toStartOf="@id/full_name_txt"
        app:layout_constraintEnd_toEndOf="@id/full_name_txt"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/phone_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_full_name_field"
        app:layout_constraintStart_toStartOf="@id/full_name_txt"
        app:layout_constraintEnd_toEndOf="@id/full_name_txt"
        app:layout_constraintBottom_toTopOf="@id/edit_phone_field"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edit_phone_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/phone_txt"
        app:layout_constraintStart_toStartOf="@id/edit_full_name_field"
        app:layout_constraintEnd_toEndOf="@id/edit_full_name_field"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_txt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_field"
        app:layout_constraintStart_toStartOf="@id/full_name_txt"
        app:layout_constraintEnd_toEndOf="@id/full_name_txt"
        app:layout_constraintBottom_toTopOf="@id/edit_address_field"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edit_address_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/address_txt"
        app:layout_constraintStart_toStartOf="@id/edit_full_name_field"
        app:layout_constraintEnd_toEndOf="@id/edit_full_name_field"
        tools:ignore="Autofill"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/teal_200"
        android:text="@string/update"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_address_field"
        app:layout_constraintStart_toStartOf="@id/edit_full_name_field"
        app:layout_constraintEnd_toEndOf="@id/edit_full_name_field"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>