<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Login"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/email_login_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/password_login_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_login_field"
        app:layout_constraintStart_toStartOf="@id/email_login_field"
        app:layout_constraintEnd_toEndOf="@id/email_login_field"
        android:layout_marginTop="20dp"
        tools:ignore="Autofill"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/teal_200"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password_login_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/no_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="18sp"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toTopOf="@+id/no_account_txt"
        app:layout_constraintStart_toEndOf="@+id/no_account_txt"
        app:layout_constraintBottom_toBottomOf="@id/no_account_txt"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>